# quantum_oracle_sketching

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: lower_bound_proof.md  theory.md
examples/real_datasets/imdb/: imdb_utils.py
examples/real_datasets/news20/: run.py
examples/real_datasets/pbmc68k/: run.py
examples/real_datasets/splice/: run.py
notebooks/: 02_empirical_results.ipynb  circuit_depth_scaling.ipynb  full_benchmark_suite.ipynb  hardware_ibm_colab.ipynb  noise_robustness_sweep.ipynb  quantum_oracle_sketching_demo.ipynb  real_datasets_colab.ipynb  warmstart_ablation.ipynb
paper/: ASSEMBLY_CHECKLIST.md  appendix_B_hardware_template.tex  main.tex  marena2026_quantum_oracle_sketching.tex  references.bib
paper/lean/: README.md
paper/sections/: appendix_datasets.tex  appendix_lean.tex  appendix_phase_time.tex  background.tex  conclusion.tex  core_scaling.tex  experiments.tex  introduction.tex  main_theorem.tex  sec51_adaptive.tex  sec52_hierarchical.tex  sec53_variational.tex  sec54_shadow.tex
quantum_oracle_sketching/quantum_oracle_sketching/: README.md  pyproject.toml
quantum_oracle_sketching/quantum_oracle_sketching/docs/: theory.md
quantum_oracle_sketching/quantum_oracle_sketching/examples/real_datasets/: shared.py
quantum_oracle_sketching/quantum_oracle_sketching/examples/real_datasets/dorothea/: run.py
quantum_oracle_sketching/quantum_oracle_sketching/examples/real_datasets/imdb/: run.py
quantum_oracle_sketching/quantum_oracle_sketching/notebooks/: 01_qos_quickstart.ipynb
quantum_oracle_sketching/quantum_oracle_sketching/src/qos/: __init__.py
quantum_oracle_sketching/quantum_oracle_sketching/src/qos/core/: oracle_sketch.py  sampling.py  state_sketch.py
quantum_oracle_sketching/quantum_oracle_sketching/src/qos/data/: generation.py
quantum_oracle_sketching/quantum_oracle_sketching/src/qos/primitives/: amplification.py
quantum_oracle_sketching/quantum_oracle_sketching/tests/: test_qsvt.py  test_utils.py
scripts/: debug_shadow.py
src/qos/: __init__.py  config.py
src/qos/core/: oracle_sketch.py  sampling.py  state_sketch.py
src/qos/data/: generation.py
src/qos/experiments/: benchmark.py  forrelation_benchmark.py  kernel_benchmark.py  noise_benchmark.py  non_iid_scaling.py  plotting.py
src/qos/experiments/real_datasets/: shared.py
src/qos/experiments/real_datasets/dorothea/: dorothea_utils.py
src/qos/experiments/real_datasets/imdb/: imdb_utils.py
src/qos/experiments/real_datasets/pbmc68k/: pbmc_utils.py
src/qos/experiments/real_datasets/splice/: splice_utils.py
src/qos/primitives/: noise_model.py
src/qos/qsvt/: angles.py  transform.py
src/qos/theory/: __init__.py  adaptive_lower_bound.py  hierarchical_sketch.py  interferometric_shadow.py  variational_warmstart.py
src/qos/utils/: numerical.py
tests/: test_ablation_helpers.py  test_adaptive_boolean.py  test_core.py  test_hierarchical_sketch.py  test_interferometric_shadow.py  test_k_forrelation.py  test_kernel_shadow.py  test_lower_bound.py  test_noise_model.py  test_non_iid_scaling.py  test_primitives.py  test_theory_fixes.py  test_utils.py  test_variational_warmstart.py
